--- a/theater.html
+++ b/theater.html
@@ -4,7 +4,7 @@
     <title>Pallavi Pokuri does Chekov tonight</title>
 </head>
 <body>
-    <h1>Pallavi Pokuri Does Chekov Tonight</h1>
+    <h1>Pallavi Pokuri does Chekov tonight</h1>
     <body>
         <h2>Ivanoff by Anton Chekov</h2>
         <p>
@@ -21,18 +21,7 @@
             <p>MARTHA. The price of lottery tickets has gone up again, my dear. I have never known such a state of affairs. The first issue is already worth two hundred and seventy and the second nearly two hundred and fifty. This has never happened before.</p>
             <p>ZINAIDA. How fortunate for those who have a great many tickets!</p>
             <p>MARTHA. Don't say that, dear; even when the price of tickets is high it does not pay to put one's capital into them.</p>
-            <p>ZINAIDA. Quite true, and yet, my dear, one never can tell what may happen. Providence is sometimes kind.</p>
-            <p>THIRD GUEST. My impression is, ladies, that at present capital is exceedingly unproductive. Shares pay very small dividends, and speculating is exceedingly dangerous. As I understand it, the capitalist now finds himself in a more critical position than the man who----</p>
-            <p>MARTHA. Quite right.</p>
-            <p>FIRST GUEST yawns.</p>
-            <p>MARTHA. How dare you yawn in the presence of ladies?</p>
-            <p>FIRST GUEST. I beg your pardon! It was quite an accident.</p>
-            <p>ZINAIDA gets up and goes out through the door on the right.</p>
-            <p>GEORGE. Two in hearts.</p>
-            <p>SECOND GUEST. Pass.</p>
-            <p>KOSICH. Pass.</p>
-            <p>MARTHA. [Aside] Heavens! This is deadly! I shall die of ennui.</p>
-            <p>Enter ZINAIDA and LEBEDIEFF through the door on the right.</p>
+            
 
     </body>
     </html>
