--- a/theater.html
+++ b/theater.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Pallavi Pokuri does Chekov tonight</title>
-    <link rel="stylesheet"  href="chekov.css">
+    <link rel="stylesheet"  href="chekov.css"/>
 </head>
 <body>
     <h1>Pallavi Pokuri does Chekov tonight</h1>
