--- a/winter.html
+++ b/winter.html
@@ -23,7 +23,7 @@
         Well then, you must do as I tell you. You must go into my room and lie
         down for a little while.
     </p>
-    <a href="winter.html">Back to Index</a>
+    <a href="winter.html">Theater</a>
     <header>
       <h1>Anton Pavlovich Chekhov Act 2</h1>
   </header>
